--- a/requirements.txt
+++ b/requirements.txt
@@ -47,5 +47,6 @@ social-auth-app-django==4.0.0
 social-auth-core==4.2.0
 sqlparse==0.4.2
 tomli==2.0.1
+typing_extensions==4.1.1
 uritemplate==4.1.1
 urllib3==1.26.8
